3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

common/object.c: Modify find_free_spot to call arch_out_of_map so that
   it properly deals with multipart objects.
server/main.c: Fix enter_map so that we first use the golem (and not player)
   when calling find_free_spot.  Also, modify code so that it properly
   updates coordinates of the multipart golem.
MSW 2001/03/20

server/skills.c: Fix orate so that we check for a positive chance (and just
not nonzero chance) for successful oration.  Due to adjustments, at low levels,
the oratory chance can be negative.  MSW 2001/03/20

server/spell_effect.c: Change cast_change_attr to find an enemy (and not
friend) when casting the curse spell.  MSW 2001/03/20

server/apply.c: Increase size of buf to be a HUGE_BUF to very
long item names don't cause a stack overflow.  MSW 2001/03/20

common/object.c: Modify update_position so that we don't show invisible
players to other players.  MSW 2001/03/20

------------------------------------------------------------------------------
Changes for 0.97.0:

MSW 2001/03/18:
common/init.c: add RESET_LOCATION_TIME initializer to settings structure.
include/config.h: Add RESET_LOCATION_TIME value.  If nonzero and the save was longer than 
    the specified time in seconds, player will be returned home upon login from
    save.
include/global.h: Add reset_loc_time field to settings structure.
server/login.c: Remove some unused variables, add support to return player
   home as described above.
server/spell_effect.c: Fix for crashes when casting control undead and your
   god does not have an enemy.  Now properly check to make sure we are not
   dereferencing null pointers.

